--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Fasthand&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />  
-  <link rel="icon" href="favicon_48x48.png" type="image/png">
-  <link href="mycss.css" rel="stylesheet" />
+  <link rel="icon" href="./images/favicon_48x48.png" type="image/png">
+  <link href="./css/mycss.css" rel="stylesheet" />
 </head>
 <body>
   <div class="container-fluid">
 
     <div class="top-section">
-      <img src="logo.png" alt="Logo" class="logo">
+      <img src="./images/logo.png" alt="Logo" class="logo">
       <h2 class="title">Course material</h2>
 
       <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -73,7 +73,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="player.js"></script>
+  <script src="./js/player.js"></script>
 
 </body>
 </html>
