--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- Google Font: Roboto Mono -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Fasthand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap" rel="stylesheet">
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />  
   <link rel="icon" href="./images/favicon_48x48.png" type="image/png">
   <link href="./css/mycss.css" rel="stylesheet" />
@@ -18,7 +20,7 @@
       <img src="./images/logo.png" alt="Logo" class="logo">
       <h2 class="title">Course material</h2>
 
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <ul class="nav nav-tabs nav-fill justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="week1-tab" data-bs-toggle="tab" data-bs-target="#week1" type="button" role="tab" aria-controls="week1" aria-selected="true">Week 1</button>
         </li>
@@ -49,7 +51,30 @@
 
     <div class="bottom-section tab-content" id="myTabContent">
       <div class="tab-pane fade show active" id="week1" role="tabpanel" aria-labelledby="week1-tab">
-        <p>Content for Week 1.</p>
+        <div class="documents-3col">
+          <div class="boxtitle">Documents</div>
+          <ul>
+            <li>Document 1</li>
+            <li>Document 2</li>
+          </ul>
+        </div>
+
+        <div class="software-3col">
+          <div class="boxtitle">Software</div>
+          <ul>
+            <li>Document 1</li>
+            <li>Document 2</li>
+          </ul>
+        </div>
+
+        
+        <div class="misc-3col">
+          <div class="boxtitle">Overig</div>
+          <ul>
+            <li>Document 1</li>
+            <li>Document 2</li>
+          </ul>
+        </div>
       </div>
       <div class="tab-pane fade" id="week2" role="tabpanel" aria-labelledby="week2-tab">
         <p>Content for Week 2.</p>
@@ -70,6 +95,8 @@
         <p>Content for Week 7.</p>
       </div>
     </div>
+    <div class="footer">Introduction to Infrastructures - &copy 2025</div>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
