--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="bottom-section tab-content" id="myTabContent">
       <div class="tab-pane fade show active" id="week1" role="tabpanel" aria-labelledby="week1-tab">
-        <div class="documents-3col">
+        <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
             <li>Document 1</li>
@@ -61,7 +61,7 @@
           </ul>
         </div>
 
-        <div class="software-3col">
+        <div class="content-3col">
           <div class="boxtitle">Software</div>
           <ul>
             <li>Document 1</li>
@@ -70,8 +70,8 @@
         </div>
 
         
-        <div class="misc-3col">
-          <div class="boxtitle">Overig</div>
+        <div class="content-3col">
+          <div class="boxtitle">Miscellaneous</div>
           <ul>
             <li>Document 1</li>
             <li>Document 2</li>
