--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <button class="nav-link" id="week7-tab" data-bs-toggle="tab" data-bs-target="#week7" type="button" role="tab" aria-controls="week7" aria-selected="false">Week 7</button>
         </li>
       </ul>
-    <button id="musicToggle">🎵</button>
-    <audio id="player"></audio>
+    <!--<button id="musicToggle">🎵</button>-->
+    <!--<audio id="player"></audio>-->
 
 
     </div>
