--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="top-section">
       <img src="./images/logo.png" alt="Logo" class="logo">
-      <h2 class="title">Course material</h2>
+      <h2 class="title">Introduction to Infrastructures</h2>
 
       <ul class="nav nav-tabs nav-fill justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -94,7 +94,7 @@
         <p>Content for Week 7.</p>
       </div>
     </div>
-    <div class="footer">Introduction to Infrastructures - &copy 2025</div>
+    <div class="footer">&copy 2025</div>
 
   </div>
 
