--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="top-section">
       <img src="./images/logo.png" alt="Logo" class="logo">
-      <h2 class="title">Introduction to Infrastructures</h2>
+      <h2 class="title">intro infra</h2>
 
       <ul class="nav nav-tabs nav-fill justify-content-center" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
