--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li>Document 1</li>
+            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf">What is an IT infrastructure?</a></li>
             <li>Document 2</li>
           </ul>
         </div>
