--- a/index.html
+++ b/index.html
@@ -15,6 +15,34 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />  
   <link rel="icon" href="./images/favicon_48x48.png" type="image/png">
   <link href="./css/mycss.css" rel="stylesheet" />
+
+<script>
+  function loadHTML(htmlUrl, tab) {
+    const container = document.getElementById(tab);
+
+    if (!container) {
+      console.error(`Element with ID "${tab}" not found.`);
+      return;
+    }
+
+    // Optional: show loading message
+    container.innerHTML = "<p>Loading...</p>";
+
+    fetch(htmlUrl)
+      .then(response => {
+        if (!response.ok) throw new Error("Network response was not ok");
+        return response.text();
+      })
+      .then(html => {
+        container.innerHTML = html;
+      })
+      .catch(error => {
+        container.innerHTML = `<p>Error loading content: ${error.message}</p>`;
+      });
+  }
+</script>
+
+
 </head>
 <body>
   <div class="container-fluid">
@@ -53,27 +81,22 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf">What is an IT infrastructure?</a></li>
+            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">Week 1</a></li>
             <li>Document 2</li>
           </ul>
-        </div>
-
-        <div class="content-3col">
-          <div class="boxtitle">Software</div>
-          <ul>
-            <li>Document 1</li>
-            <li>Document 2</li>
-          </ul>
-        </div>
-
-        
-        <div class="content-3col">
           <div class="boxtitle">Miscellaneous</div>
           <ul>
             <li>Document 1</li>
             <li>Document 2</li>
           </ul>
         </div>
+        <div class="content-2colb">
+          <div class="boxtitle">Software</div>
+          <object data="./pdf/Week1 Introduction Infrastructure.pdf#toolbar=0" type="application/pdf">
+            <p>Unable to display PDF file. <a href="./pdf/Week1 Introduction Infrastructure.pdf">Download</a></p>
+         </object>
+        </div>
+
       </div>
       <div class="tab-pane fade" id="week2" role="tabpanel" aria-labelledby="week2-tab">
         <p>Content for Week 2.</p>
@@ -98,7 +121,6 @@
 
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>  
 </body>
 </html>
