--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
 
     <div class="bottom-section tab-content" id="myTabContent">
       <div class="tab-pane fade show active" id="week1" role="tabpanel" aria-labelledby="week1-tab">
-        <div class="content-3col">
+        <div class="content-2col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">Week 1</a></li>
-            <li>Document 2</li>
+            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">What is an IT infrastructure?</a></li>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a href="./pdf/Introduction to infrastructures -  Template report.docx" target="_blank">Template report</a></li>
           </ul>
           <div class="boxtitle">Miscellaneous</div>
           <ul>
