--- a/index.html
+++ b/index.html
@@ -78,25 +78,33 @@
 
     <div class="bottom-section tab-content" id="myTabContent">
       <div class="tab-pane fade show active" id="week1" role="tabpanel" aria-labelledby="week1-tab">
-        <div class="content-2col">
+        <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
             <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">What is an IT infrastructure?</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a href="./pdf/Introduction to infrastructures -  Template report.docx" target="_blank">Template report</a></li>
           </ul>
-          <div class="boxtitle">Miscellaneous</div>
+          <div class="boxtitle">Software</div>
           <ul>
-            <li>Document 1</li>
-            <li>Document 2</li>
+            <li><a href="https://www.debian.org/CD/netinst/" target="_blank">Debian 12 Server</a></li>
+            <li><a href="https://cdimage.ubuntu.com/noble/daily-live/current/" target="_blank">Ubuntu 24.04 Desktop</a></li>
+            <li><a href="https://www.mikeroysoft.com/post/download-fusion-ws/" target="_blank">Getting VMware</a></li>
+            <li><a href="http://www.broadcom.com/" target="_blank">Register at Broadcom</a></li>
+          </ul>
+          <div class="boxtitle">Homework</div>
+          <ul>
+            <li><b>After lesson 1:</b> Do the assignments of week 0.</li>
+            <li><b>After lesson 2:</b> Do the assignments of week 1.</li><br>
+            <li>Please consult the assignments document and the template report for more details.</li>
           </ul>
         </div>
         <div class="content-2colb">
-          <div class="boxtitle">Software</div>
-          <object data="./pdf/Week1 Introduction Infrastructure.pdf#toolbar=0" type="application/pdf">
-            <p>Unable to display PDF file. <a href="./pdf/Week1 Introduction Infrastructure.pdf">Download</a></p>
-         </object>
+          <div class="boxtitle">Media</div>
+          <iframe src="https://www.youtube.com/embed/9W0quPtrxeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        
+        
 
       </div>
       <div class="tab-pane fade" id="week2" role="tabpanel" aria-labelledby="week2-tab">
