--- a/index.html
+++ b/index.html
@@ -15,34 +15,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />  
   <link rel="icon" href="./images/favicon_48x48.png" type="image/png">
   <link href="./css/mycss.css" rel="stylesheet" />
-
-<script>
-  function loadHTML(htmlUrl, tab) {
-    const container = document.getElementById(tab);
-
-    if (!container) {
-      console.error(`Element with ID "${tab}" not found.`);
-      return;
-    }
-
-    // Optional: show loading message
-    container.innerHTML = "<p>Loading...</p>";
-
-    fetch(htmlUrl)
-      .then(response => {
-        if (!response.ok) throw new Error("Network response was not ok");
-        return response.text();
-      })
-      .then(html => {
-        container.innerHTML = html;
-      })
-      .catch(error => {
-        container.innerHTML = `<p>Error loading content: ${error.message}</p>`;
-      });
-  }
-</script>
-
-
 </head>
 <body>
   <div class="container-fluid">
@@ -101,7 +73,9 @@
         </div>
         <div class="content-2colb">
           <div class="boxtitle">Media</div>
-          <iframe src="https://www.youtube.com/embed/9W0quPtrxeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/OzsQU-sHZhE" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
         
         
