--- a/assignments.html
+++ b/assignments.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <object data="./pdf/Introduction to infrastructures - Assignments.pdf" type="application/pdf">
-      <p>Unable to display PDF file. <a href="./pdf/week1.pdf">Download</a></p>
+      <p>Unable to display PDF file. <a href="./pdf/Introduction to infrastructures - Assignments.pdf">Download</a></p>
     </object>
   </body>
 </html>
