--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="boxtitle">Documents</div>
           <ul>
             <li><a href="#" onclick="onDownloadClick('./pdf/Week1 Introduction Infrastructure.pdf','application/pdf','Week1 Introduction Infrastructure.pdf')">What is an IT infrastructure?</a></li>
-            <li><a href="./assignments.html" target="_blank">Assignments document</a></li>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a href="./pdf/Introduction to infrastructures -  Template report.docx" target="_blank">Template report</a></li>
           </ul>
           <div class="boxtitle">Software</div>
