--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="#" onclick="onDownloadClick('./pdf/Week1 Introduction Infrastructure.pdf','application/pdf','Week1 Introduction Infrastructure.pdf')">What is an IT infrastructure?</a></li>
+            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">What is an IT infrastructure?</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a href="./pdf/Introduction to infrastructures -  Template report.docx" target="_blank">Template report</a></li>
           </ul>
@@ -66,8 +66,8 @@
           </ul>
           <div class="boxtitle">Homework</div>
           <ul>
-            <li><b>After lesson 1:</b> Do the assignments of week 0.</li>
-            <li><b>After lesson 2:</b> Do the assignments of week 1.</li><br>
+            <li><b>After lesson 1:</b><br>Do the assignments of week 0.</li>
+            <li><b>After lesson 2:</b><br>Do the assignments of week 1.</li><br>
             <li>Please consult the assignments document and the template report for more details.</li>
           </ul>
         </div>
@@ -98,42 +98,7 @@
       </div>
     </div>
     <div class="footer">&copy 2025</div>
-
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    async function onDownloadClick(fileUrl, mimeType, filename) {
-      try {
-        const response = await fetch(fileUrl);
-        if (!response.ok) {
-          throw new Error(`Failed to fetch file: ${response.statusText}`);
-        }
-
-        const blob = await response.blob();
-        const blobUrl = window.URL.createObjectURL(blob);
-
-        const isIOS = /iP(ad|hone|od)/.test(navigator.userAgent);
-        if (isIOS) {
-          window.open(blobUrl, '_blank');
-          alert("iOS detected: The file opened in a new tab. Long press and choose 'Save to Files' to download.");
-        } else {
-          const a = document.createElement('a');
-          a.href = blobUrl;
-          a.download = filename || 'download';
-          document.body.appendChild(a);
-          a.click();
-          document.body.removeChild(a);
-        }
-
-        setTimeout(() => window.URL.revokeObjectURL(blobUrl), 100);
-
-      } catch (error) {
-        alert('Download failed: ' + error.message);
-        console.error('Download error:', error);
-      }
-    }
-  </script>
-
 </body>
 </html>
