--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <ul>
             <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">What is an IT infrastructure?</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
-            <li><a href="./pdf/Introduction to infrastructures -  Template report.docx" target="_blank">Template report</a></li>
+            <li><a href="#" onclick="downloadFile('./pdf/Introduction to infrastructures - Template report.docx','Introduction to infrastructures - Template report.docx','application/vnd.openxmlformats-officedocument.wordprocessingml.document')">Download Template report</a></li>
           </ul>
           <div class="boxtitle">Software</div>
           <ul>
@@ -100,5 +100,6 @@
     <div class="footer">&copy 2025</div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/download.js"></script>
 </body>
 </html>
