--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <ul>
             <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">What is an IT infrastructure?</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a href="#" onclick="window.location.href = './pdf/Introduction to infrastructures - Template report.docx';">Test</a></li>
             <li><a href="#" onclick="downloadFile('./pdf/Introduction to infrastructures - Template report.docx','Introduction to infrastructures - Template report.docx','application/vnd.openxmlformats-officedocument.wordprocessingml.document')">Download Template report</a></li>
           </ul>
           <div class="boxtitle">Software</div>
