--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
           <ul>
             <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">What is an IT infrastructure?</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
-            <li><a href="./pdf/Introduction to infrastructures - Template report.docx" download target="_blank">Test</a></li>
-            <li><a href="#" onclick="window.location.href = './pdf/Introduction to infrastructures - Template report.docx';">Download Template report</a></li>
+            <li><a id="downloadLink" download>Download template report</a></li>
           </ul>
           <div class="boxtitle">Software</div>
           <ul>
@@ -101,5 +100,23 @@
     <div class="footer">&copy 2025</div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  function isIOS() {
+    return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+  }
+
+  document.addEventListener("DOMContentLoaded", function () {
+    const link = document.getElementById("downloadLink");
+
+    if (isIOS()) {
+      link.href = "./pdf/Introduction to infrastructures - Template report.pdf";
+      link.download = "Introduction to infrastructures - Template report.pdf";
+    } else {
+      link.href = "./pdf/Introduction to infrastructures - Template report.docx";
+      link.download = "Introduction to infrastructures - Template report.docx";
+    }
+  });
+</script>
+
 </body>
 </html>
