--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="content-2colb">
           <div class="boxtitle">Media</div>
           <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/OzsQU-sHZhE" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/9W0quPtrxeQ" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -117,6 +117,5 @@
     }
   });
 </script>
-
 </body>
 </html>
