--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">What is an IT infrastructure?</a></li>
+            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">Sheets - Week1 What is an IT infrastructure?</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
-            <li><a id="downloadLink" download>Download template report</a></li>
+            <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
           <div class="boxtitle">Software</div>
           <ul>
@@ -79,22 +79,137 @@
         </div>
       </div>
       <div class="tab-pane fade" id="week2" role="tabpanel" aria-labelledby="week2-tab">
-        <p>Content for Week 2.</p>
+        <div class="content-3col">
+          <div class="boxtitle">Documents</div>
+          <ul>
+            <li><a href="./pdf/Week2 Hardware and Virtualization.pdf" target="_blank">Sheets - Week2 Hardware and Virtualization</a></li>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a class="downloadLink" download>Download template report</a></li>
+          </ul>
+          <div class="boxtitle">Homework</div>
+          <ul>
+            <li>Do the assignments of week 2.</li>
+            <li>Please consult the assignments document and the template report for more details.</li>
+          </ul>
+        </div>
+        <div class="content-2colb">
+          <div class="boxtitle">Media</div>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/F-x_0TRdNS0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="tab-pane fade" id="week3" role="tabpanel" aria-labelledby="week3-tab">
-        <p>Content for Week 3.</p>
+        <div class="content-3col">
+          <div class="boxtitle">Documents</div>
+          <ul>
+            <li><a href="./pdf/Week3 Operating Systems.pdf" target="_blank">Sheets - Week3 Operating Systems and Containers</a></li>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a class="downloadLink" download>Download template report</a></li>
+          </ul>
+          <div class="boxtitle">Homework</div>
+          <ul>
+            <li>Do the assignments of week 3.</li>
+            <li>Please consult the assignments document and the template report for more details.</li>
+          </ul>
+        </div>
+        <div class="content-2colb">
+          <div class="boxtitle">Media</div>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/eyNBf1sqdBQ" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="tab-pane fade" id="week4" role="tabpanel" aria-labelledby="week4-tab">
-        <p>Content for Week 4.</p>
+        <div class="content-3col">
+          <div class="boxtitle">Documents</div>
+          <ul>
+            <li><a href="./pdf/Week4 Networking.pdf" target="_blank">Sheets - Week4 Networking</a></li>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a class="downloadLink" download>Download template report</a></li>
+          </ul>
+          <div class="boxtitle">Homework</div>
+          <ul>
+            <li>Do the assignments of week 4.</li>
+            <li>Please consult the assignments document and the template report for more details.</li>
+          </ul>
+        </div>
+        <div class="content-2colb">
+          <div class="boxtitle">Media</div>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/s_Ntt6eTn94" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="tab-pane fade" id="week5" role="tabpanel" aria-labelledby="week5-tab">
-        <p>Content for Week 5.</p>
+        <div class="content-3col">
+          <div class="boxtitle">Documents</div>
+          <ul>
+            <li><a href="./pdf/Week5 Backups and Security.pdf" target="_blank">Sheets - Week5 Backups and Security</a></li>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a class="downloadLink" download>Download template report</a></li>
+          </ul>
+          <div class="boxtitle">Homework</div>
+          <ul>
+            <li>Do the assignments of week 5.</li>
+            <li>Please consult the assignments document and the template report for more details.</li>
+          </ul>
+        </div>
+        <div class="content-2colb">
+          <div class="boxtitle">Media</div>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/3yZDDr0JKVc" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="tab-pane fade" id="week6" role="tabpanel" aria-labelledby="week6-tab">
-        <p>Content for Week 6.</p>
+        <div class="content-3col">
+          <div class="boxtitle">Documents</div>
+          <ul>
+            <li><a href="./pdf/Week6 Cloud Computing.pdf" target="_blank">Sheets - Week6 Cloud Computing</a></li>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a class="downloadLink" download>Download template report</a></li>
+          </ul>
+          <div class="boxtitle">Homework</div>
+          <ul>
+            <li>Do the assignments of week 6.</li>
+            <li>Please consult the assignments document and the template report for more details.</li>
+          </ul>
+        </div>
+        <div class="content-2colb">
+          <div class="boxtitle">Media</div>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/_a6us8kaq0g" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="tab-pane fade" id="week7" role="tabpanel" aria-labelledby="week7-tab">
-        <p>Content for Week 7.</p>
+        <div class="content-3col">
+          <div class="boxtitle">Documents</div>
+          <ul>
+            <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
+            <li><a class="downloadLink" download>Download template report</a></li>
+          </ul>
+          <div class="boxtitle">Homework</div>
+          <ul>
+            <li>Finish your report. Submit it on Brighspace in the <b>introduction to infrastructures course.</b></li>
+            <li>Please consult the assignments document and the template report for more details.</li>
+          </ul>
+          <div class="boxtitle">Submit your report on Brightspace</div>
+          <ul>
+            <br>
+            <li><a href="https://brightspace.saxion.nl/d2l/home/131362" target="_blank">I am a student taking the Dutch course</a></li>
+            <br>
+            <li><a href="https://brightspace.saxion.nl/d2l/home/131418" target="_blank">I am a student taking the international course</a></li>
+          </ul>
+
+        </div>
+        <div class="content-2colb">
+          <div class="boxtitle">Media</div>
+          <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/DgJS2tQPGKQ" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer">&copy 2025</div>
@@ -106,16 +221,19 @@
   }
 
   document.addEventListener("DOMContentLoaded", function () {
-    const link = document.getElementById("downloadLink");
+    const links = document.querySelectorAll(".downloadLink");
 
-    if (isIOS()) {
-      link.href = "./pdf/Introduction to infrastructures - Template report.pdf";
-      link.download = "Introduction to infrastructures - Template report.pdf";
-    } else {
-      link.href = "./pdf/Introduction to infrastructures - Template report.docx";
-      link.download = "Introduction to infrastructures - Template report.docx";
-    }
+    links.forEach(link => {
+      if (isIOS()) {
+        link.href = "./pdf/Introduction to infrastructures - Template report.pdf";
+        link.download = "Introduction to infrastructures - Template report.pdf";
+      } else {
+        link.href = "./pdf/Introduction to infrastructures - Template report.docx";
+        link.download = "Introduction to infrastructures - Template report.docx";
+      }
+    });
   });
 </script>
+
 </body>
 </html>
