--- a/index.html
+++ b/index.html
@@ -195,9 +195,12 @@
             <li>Finish your report. Submit it on Brighspace in the <b>introduction to infrastructures course.</b></li>
             <li>Please consult the assignments document and the template report for more details.</li>
           </ul>
-          <div class="boxtitle">Submit your report on Brightspace</div>
+          <div class="boxtitle">Submit your report</div>
+            <div class="deadline">
+                DEADLINE Friday, 17 October 2025 by 23:59<br>
+                Late submissions will not be graded
+            </div>
           <ul>
-            <br>
             <li><a href="https://brightspace.saxion.nl/d2l/home/131362" target="_blank">I am a student taking the Dutch course</a></li>
             <br>
             <li><a href="https://brightspace.saxion.nl/d2l/home/131418" target="_blank">I am a student taking the international course</a></li>
