--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
           </ul>
           <div class="boxtitle">Submit your report</div>
             <div class="deadline">
-                DEADLINE Friday, 17 October 2025 by 23:59<br>
-                Late submissions will not be graded
+                DEADLINE<br>Friday, 17 October 2025<br>by 23:59
             </div>
           <ul>
             <li><a href="https://brightspace.saxion.nl/d2l/home/131362" target="_blank">I am a student taking the Dutch course</a></li>
