--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">Sheets - Week1 What is an IT infrastructure?</a></li>
+            <li><a href="./pdf/Week1 Introduction Infrastructure.pdf" target="_blank">Week1 What is an IT infrastructure?</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
@@ -82,7 +82,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week2 Hardware and Virtualization.pdf" target="_blank">Sheets - Week2 Hardware and Virtualization</a></li>
+            <li><a href="./pdf/Week2 Hardware and Virtualization.pdf" target="_blank">Week2 Hardware and Virtualization</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
@@ -103,7 +103,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week3 Operating Systems.pdf" target="_blank">Sheets - Week3 Operating Systems and Containers</a></li>
+            <li><a href="./pdf/Week3 Operating Systems.pdf" target="_blank">Week3 Operating Systems and Containers</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
@@ -124,7 +124,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week4 Networking.pdf" target="_blank">Sheets - Week4 Networking</a></li>
+            <li><a href="./pdf/Week4 Networking.pdf" target="_blank">Week4 Networking</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
@@ -145,7 +145,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week5 Backups and Security.pdf" target="_blank">Sheets - Week5 Backups and Security</a></li>
+            <li><a href="./pdf/Week5 Backups and Security.pdf" target="_blank">Week5 Backups and Security</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
@@ -166,7 +166,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week6 Cloud Computing.pdf" target="_blank">Sheets - Week6 Cloud Computing</a></li>
+            <li><a href="./pdf/Week6 Cloud Computing.pdf" target="_blank">Week6 Cloud Computing</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
@@ -200,9 +200,9 @@
                 DEADLINE<br>Friday, 17 October 2025<br>by 23:59
             </div>
           <ul>
-            <li><a href="https://brightspace.saxion.nl/d2l/home/131362" target="_blank">I am a student taking the Dutch course</a></li>
+            <li>⬆<a href="https://brightspace.saxion.nl/d2l/home/131362" target="_blank">I am taking the Dutch course</a></li>
             <br>
-            <li><a href="https://brightspace.saxion.nl/d2l/home/131418" target="_blank">I am a student taking the international course</a></li>
+            <li>⬆<a href="https://brightspace.saxion.nl/d2l/home/131418" target="_blank">I am taking the international course</a></li>
           </ul>
 
         </div>
