--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
                 DEADLINE<br>Friday, 17 October 2025<br>by 23:59
             </div>
           <ul>
-            <li>⬆<a href="https://brightspace.saxion.nl/d2l/home/131362" target="_blank">I am taking the Dutch course</a></li>
+            <li><a href="https://brightspace.saxion.nl/d2l/home/131362" target="_blank">I am taking the Dutch course</a></li>
             <br>
-            <li>⬆<a href="https://brightspace.saxion.nl/d2l/home/131418" target="_blank">I am taking the international course</a></li>
+            <li><a href="https://brightspace.saxion.nl/d2l/home/131418" target="_blank">I am taking the international course</a></li>
           </ul>
 
         </div>
