--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week2 Hardware and Virtualization.pdf" target="_blank">Week2 Hardware and Virtualization</a></li>
+            <li><a href="./pdf/Week2 Hardware and Virtualization.pdf" target="_blank">Week2 Hardware & Virtualization</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
@@ -103,7 +103,7 @@
         <div class="content-3col">
           <div class="boxtitle">Documents</div>
           <ul>
-            <li><a href="./pdf/Week3 Operating Systems.pdf" target="_blank">Week3 Operating Systems and Containers</a></li>
+            <li><a href="./pdf/Week3 Operating Systems.pdf" target="_blank">Week3 Operating Systems & Containers</a></li>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
           </ul>
