--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
           <div class="boxtitle">Homework</div>
           <ul>
             <li>Finish your report. Submit it on Brighspace in the <b>introduction to infrastructures course.</b></li>
+            <li><a href="./pdf/Rubrics.pdf" target="_blank">Check the Rubrics</a></li>
             <li>Please consult the assignments document and the template report for more details.</li>
           </ul>
           <div class="boxtitle">Submit your report</div>
