--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
           <ul>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
+            <li><a href="./pdf/Rubrics.pdf" target="_blank">Check the rubrics</a></li>
           </ul>
           <div class="boxtitle">Homework</div>
           <ul>
             <li>Finish your report. Submit it on Brighspace in the <b>introduction to infrastructures course.</b></li>
-            <li><a href="./pdf/Rubrics.pdf" target="_blank">Check the Rubrics</a></li>
             <li>Please consult the assignments document and the template report for more details.</li>
           </ul>
           <div class="boxtitle">Submit your report</div>
