--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <ul>
             <li><a href="./pdf/Introduction to infrastructures - Assignments.pdf" target="_blank">Assignments document</a></li>
             <li><a class="downloadLink" download>Download template report</a></li>
-            <li><a href="./pdf/Rubrics.pdf" target="_blank">Check the rubrics</a></li>
+            <li><a href="./pdf/Rubrics.pdf" target="_blank">Check the rubric before submitting</a></li>
           </ul>
           <div class="boxtitle">Homework</div>
           <ul>
