--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           </ul>
           <div class="boxtitle">Software</div>
           <ul>
-            <li>Debian 12 Server <a href="https://cdimage.debian.org/debian-cd/12.11.0/amd64/iso-cd/debian-12.11.0-amd64-netinst.iso" target="_blank">AMD64</a> <a href="https://cdimage.debian.org/debian-cd/12.11.0/arm64/iso-cd/debian-12.11.0-arm64-netinst.iso" target="_blank">ARM64</a></li>
-            <li>Ubuntu 24.04 Desktop <a href="https://cdimage.ubuntu.com/noble/daily-live/current/noble-desktop-amd64.iso" target="_blank">AMD64</a> <a href="https://cdimage.ubuntu.com/noble/daily-live/current/noble-desktop-arm64.iso" target="_blank">ARM64</a></li>
+            <li>Debian 12 Server <a href="https://cdimage.debian.org/debian-cd/12.11.0/amd64/iso-cd/debian-12.11.0-amd64-netinst.iso" target="_blank">AMD64</a>, <a href="https://cdimage.debian.org/debian-cd/12.11.0/arm64/iso-cd/debian-12.11.0-arm64-netinst.iso" target="_blank">ARM64</a></li>
+            <li>Ubuntu 24.04 Desktop <a href="https://cdimage.ubuntu.com/noble/daily-live/current/noble-desktop-amd64.iso" target="_blank">AMD64</a>, <a href="https://cdimage.ubuntu.com/noble/daily-live/current/noble-desktop-arm64.iso" target="_blank">ARM64</a></li>
             <li><a href="https://www.mikeroysoft.com/post/download-fusion-ws/" target="_blank">Getting VMware</a></li>
             <li><a href="http://www.broadcom.com/" target="_blank">Register at Broadcom</a></li>
           </ul>
