--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="content-2colb">
           <div class="boxtitle">Media</div>
           <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/9W0quPtrxeQ" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/videoseries?list=PLcMnmqxNmA8bLvkLOtTPSkGe1mCUhirC2" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
