--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </ul>
         </div>
         <div class="content-2colb">
-          <div class="boxtitle">Media</div>
+          <div class="boxtitle">Playlist</div>
           <div class="video-container">
             <iframe src="https://www.youtube.com/embed/videoseries?list=PLcMnmqxNmA8bLvkLOtTPSkGe1mCUhirC2" frameborder="0" allowfullscreen></iframe>
           </div>
